lab3-solution/y.output
Grammar

    0 $accept: Program $end

    1 Program: ProgramElementList

    2 ProgramElementList: ProgramElement ProgramElementList
    3                   | ε

    4 ProgramElement: VarDeclStmt
    5               | StructDef
    6               | FnDeclStmt
    7               | FnDef
    8               | SEMICOLON

    9 ArithExpr: ArithExpr ADD ArithExpr
   10          | ArithExpr SUB ArithExpr
   11          | ArithExpr MUL ArithExpr
   12          | ArithExpr DIV ArithExpr
   13          | ExprUnit

   14 ArrayExpr: ID LSB ID RSB
   15          | ID LSB NUM RSB

   16 ExprUnit: NUM
   17         | ID
   18         | LP ArithExpr RP
   19         | FnCall
   20         | ArrayExpr
   21         | ID DOT ID
   22         | SUB ExprUnit

   23 BoolExpr: BoolExpr AND BoolExpr
   24         | BoolExpr OR BoolExpr
   25         | BoolUnit

   26 BoolUnit: ExprUnit LT ExprUnit
   27         | ExprUnit LE ExprUnit
   28         | ExprUnit GT ExprUnit
   29         | ExprUnit GE ExprUnit
   30         | ExprUnit EQ ExprUnit
   31         | ExprUnit NE ExprUnit
   32         | LP BoolExpr RP
   33         | NOT BoolUnit

   34 AssignStmt: LeftVal AS RightVal SEMICOLON

   35 LeftVal: ID
   36        | ArrayExpr
   37        | ID DOT ID

   38 RightVal: ArithExpr
   39         | BoolExpr

   40 RightValList: RightVal RightValRestList
   41             | ε

   42 RightValRestList: RightValRest RightValRestList
   43                 | ε

   44 RightValRest: COMMA RightVal

   45 FnCall: ID LP RightValList RP

   46 VarDeclStmt: LET VarDecl SEMICOLON
   47            | LET VarDef SEMICOLON

   48 VarDecl: ID COLON Type
   49        | ID
   50        | ID LSB NUM RSB COLON Type
   51        | ID LSB NUM RSB

   52 VarDef: ID COLON Type AS RightVal
   53       | ID AS RightVal
   54       | ID LSB NUM RSB COLON Type AS LB RightValList RB
   55       | ID LSB NUM RSB AS LB RightValList RB

   56 Type: INT
   57     | ID

   58 VarDeclList: VarDecl VarDeclRestList
   59            | ε

   60 VarDeclRestList: VarDeclRest VarDeclRestList
   61                | ε

   62 VarDeclRest: COMMA VarDecl

   63 StructDef: STRUCT ID LB VarDeclList RB

   64 ParamDecl: VarDeclList

   65 FnDecl: FN ID LP ParamDecl RP
   66       | FN ID LP ParamDecl RP ARROW Type

   67 FnDeclStmt: FnDecl SEMICOLON

   68 ReturnStmt: RETURN RightVal SEMICOLON

   69 FnDef: FnDecl CodeBlock

   70 CodeBlockStmt: VarDeclStmt
   71              | AssignStmt
   72              | CallStmt
   73              | IfStmt
   74              | WhileStmt
   75              | ReturnStmt
   76              | CONTINUE SEMICOLON
   77              | BREAK SEMICOLON
   78              | SEMICOLON

   79 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList
   80                  | ε

   81 CodeBlock: LB CodeBlockStmtList RB

   82 CallStmt: FnCall SEMICOLON

   83 IfStmt: IF LP BoolExpr RP CodeBlock
   84       | IF LP BoolExpr RP CodeBlock ELSE CodeBlock

   85 WhileStmt: WHILE LP BoolExpr RP CodeBlock


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenId> (258) 14 15 17 21 35 37 45 48 49 50 51 52 53 54 55 57 63 65 66
    NUM <tokenNum> (259) 15 16 50 51 54 55
    INT <pos> (260) 56
    LET <pos> (261) 46 47
    STRUCT <pos> (262) 63
    FN <pos> (263) 65 66
    IF <pos> (264) 83 84
    ELSE <pos> (265) 84
    WHILE <pos> (266) 85
    DOT <pos> (267) 21 37
    CONTINUE <pos> (268) 76
    BREAK <pos> (269) 77
    RETURN <pos> (270) 68
    SEMICOLON <pos> (271) 8 34 46 47 67 68 76 77 78 82
    COMMA <pos> (272) 44 62
    COLON <pos> (273) 48 50 52 54
    ARROW <pos> (274) 66
    ADD <pos> (275) 9
    SUB <pos> (276) 10 22
    MUL <pos> (277) 11
    DIV <pos> (278) 12
    OR <pos> (279) 24
    AND <pos> (280) 23
    LT <pos> (281) 26
    LE <pos> (282) 27
    GT <pos> (283) 28
    GE <pos> (284) 29
    EQ <pos> (285) 30
    NE <pos> (286) 31
    NOT <pos> (287) 33
    LP <pos> (288) 18 32 45 65 66 83 84 85
    RP <pos> (289) 18 32 45 65 66 83 84 85
    LB <pos> (290) 54 55 63 81
    RB <pos> (291) 54 55 63 81
    LSB <pos> (292) 14 15 50 51 54 55
    RSB <pos> (293) 14 15 50 51 54 55
    AS <pos> (294) 34 52 53 54 55
    NEG (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Program <program> (42)
        on left: 1
        on right: 0
    ProgramElementList <programElementList> (43)
        on left: 2 3
        on right: 1 2
    ProgramElement <programElement> (44)
        on left: 4 5 6 7 8
        on right: 2
    ArithExpr <arithExpr> (45)
        on left: 9 10 11 12 13
        on right: 9 10 11 12 18 38
    ArrayExpr <arrayExpr> (46)
        on left: 14 15
        on right: 20 36
    ExprUnit <exprUnit> (47)
        on left: 16 17 18 19 20 21 22
        on right: 13 22 26 27 28 29 30 31
    BoolExpr <boolExpr> (48)
        on left: 23 24 25
        on right: 23 24 32 39 83 84 85
    BoolUnit <boolUnit> (49)
        on left: 26 27 28 29 30 31 32 33
        on right: 25 33
    AssignStmt <assignStmt> (50)
        on left: 34
        on right: 71
    LeftVal <leftVal> (51)
        on left: 35 36 37
        on right: 34
    RightVal <rightVal> (52)
        on left: 38 39
        on right: 34 40 44 52 53 68
    RightValList <rightValList> (53)
        on left: 40 41
        on right: 45 54 55
    RightValRestList <rightValList> (54)
        on left: 42 43
        on right: 40 42
    RightValRest <rightVal> (55)
        on left: 44
        on right: 42
    FnCall <fnCall> (56)
        on left: 45
        on right: 19 82
    VarDeclStmt <varDeclStmt> (57)
        on left: 46 47
        on right: 4 70
    VarDecl <varDecl> (58)
        on left: 48 49 50 51
        on right: 46 58 62
    VarDef <varDef> (59)
        on left: 52 53 54 55
        on right: 47
    Type <type> (60)
        on left: 56 57
        on right: 48 50 52 54 66
    VarDeclList <varDeclList> (61)
        on left: 58 59
        on right: 63 64
    VarDeclRestList <varDeclList> (62)
        on left: 60 61
        on right: 58 60
    VarDeclRest <varDecl> (63)
        on left: 62
        on right: 60
    StructDef <structDef> (64)
        on left: 63
        on right: 5
    ParamDecl <paramDecl> (65)
        on left: 64
        on right: 65 66
    FnDecl <fnDecl> (66)
        on left: 65 66
        on right: 67 69
    FnDeclStmt <fnDeclStmt> (67)
        on left: 67
        on right: 6
    ReturnStmt <returnStmt> (68)
        on left: 68
        on right: 75
    FnDef <fnDef> (69)
        on left: 69
        on right: 7
    CodeBlockStmt <codeBlockStmt> (70)
        on left: 70 71 72 73 74 75 76 77 78
        on right: 79
    CodeBlockStmtList <codeBlockStmtList> (71)
        on left: 79 80
        on right: 79 81
    CodeBlock <codeBlockStmtList> (72)
        on left: 81
        on right: 69 83 84 85
    CallStmt <callStmt> (73)
        on left: 82
        on right: 72
    IfStmt <ifStmt> (74)
        on left: 83 84
        on right: 73
    WhileStmt <whileStmt> (75)
        on left: 85
        on right: 74


State 0

    0 $accept: • Program $end

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDecl              go to state 10
    FnDeclStmt          go to state 11
    FnDef               go to state 12


State 1

   46 VarDeclStmt: LET • VarDecl SEMICOLON
   47            | LET • VarDef SEMICOLON

    ID  shift, and go to state 13

    VarDecl  go to state 14
    VarDef   go to state 15


State 2

   63 StructDef: STRUCT • ID LB VarDeclList RB

    ID  shift, and go to state 16


State 3

   65 FnDecl: FN • ID LP ParamDecl RP
   66       | FN • ID LP ParamDecl RP ARROW Type

    ID  shift, and go to state 17


State 4

    8 ProgramElement: SEMICOLON •

    $default  reduce using rule 8 (ProgramElement)


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 18


State 6

    1 Program: ProgramElementList •

    $default  reduce using rule 1 (Program)


State 7

    2 ProgramElementList: ProgramElement • ProgramElementList

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    ProgramElementList  go to state 19
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDecl              go to state 10
    FnDeclStmt          go to state 11
    FnDef               go to state 12


State 8

    4 ProgramElement: VarDeclStmt •

    $default  reduce using rule 4 (ProgramElement)


State 9

    5 ProgramElement: StructDef •

    $default  reduce using rule 5 (ProgramElement)


State 10

   67 FnDeclStmt: FnDecl • SEMICOLON
   69 FnDef: FnDecl • CodeBlock

    SEMICOLON  shift, and go to state 20
    LB         shift, and go to state 21

    CodeBlock  go to state 22


State 11

    6 ProgramElement: FnDeclStmt •

    $default  reduce using rule 6 (ProgramElement)


State 12

    7 ProgramElement: FnDef •

    $default  reduce using rule 7 (ProgramElement)


State 13

   48 VarDecl: ID • COLON Type
   49        | ID •
   50        | ID • LSB NUM RSB COLON Type
   51        | ID • LSB NUM RSB
   52 VarDef: ID • COLON Type AS RightVal
   53       | ID • AS RightVal
   54       | ID • LSB NUM RSB COLON Type AS LB RightValList RB
   55       | ID • LSB NUM RSB AS LB RightValList RB

    COLON  shift, and go to state 23
    LSB    shift, and go to state 24
    AS     shift, and go to state 25

    $default  reduce using rule 49 (VarDecl)


State 14

   46 VarDeclStmt: LET VarDecl • SEMICOLON

    SEMICOLON  shift, and go to state 26


State 15

   47 VarDeclStmt: LET VarDef • SEMICOLON

    SEMICOLON  shift, and go to state 27


State 16

   63 StructDef: STRUCT ID • LB VarDeclList RB

    LB  shift, and go to state 28


State 17

   65 FnDecl: FN ID • LP ParamDecl RP
   66       | FN ID • LP ParamDecl RP ARROW Type

    LP  shift, and go to state 29


State 18

    0 $accept: Program $end •

    $default  accept


State 19

    2 ProgramElementList: ProgramElement ProgramElementList •

    $default  reduce using rule 2 (ProgramElementList)


State 20

   67 FnDeclStmt: FnDecl SEMICOLON •

    $default  reduce using rule 67 (FnDeclStmt)


State 21

   81 CodeBlock: LB • CodeBlockStmtList RB

    ID         shift, and go to state 30
    LET        shift, and go to state 1
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    CONTINUE   shift, and go to state 33
    BREAK      shift, and go to state 34
    RETURN     shift, and go to state 35
    SEMICOLON  shift, and go to state 36

    $default  reduce using rule 80 (CodeBlockStmtList)

    ArrayExpr          go to state 37
    AssignStmt         go to state 38
    LeftVal            go to state 39
    FnCall             go to state 40
    VarDeclStmt        go to state 41
    ReturnStmt         go to state 42
    CodeBlockStmt      go to state 43
    CodeBlockStmtList  go to state 44
    CallStmt           go to state 45
    IfStmt             go to state 46
    WhileStmt          go to state 47


State 22

   69 FnDef: FnDecl CodeBlock •

    $default  reduce using rule 69 (FnDef)


State 23

   48 VarDecl: ID COLON • Type
   52 VarDef: ID COLON • Type AS RightVal

    ID   shift, and go to state 48
    INT  shift, and go to state 49

    Type  go to state 50


State 24

   50 VarDecl: ID LSB • NUM RSB COLON Type
   51        | ID LSB • NUM RSB
   54 VarDef: ID LSB • NUM RSB COLON Type AS LB RightValList RB
   55       | ID LSB • NUM RSB AS LB RightValList RB

    NUM  shift, and go to state 51


State 25

   53 VarDef: ID AS • RightVal

    ID   shift, and go to state 52
    NUM  shift, and go to state 53
    SUB  shift, and go to state 54
    NOT  shift, and go to state 55
    LP   shift, and go to state 56

    ArithExpr  go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    BoolExpr   go to state 60
    BoolUnit   go to state 61
    RightVal   go to state 62
    FnCall     go to state 63


State 26

   46 VarDeclStmt: LET VarDecl SEMICOLON •

    $default  reduce using rule 46 (VarDeclStmt)


State 27

   47 VarDeclStmt: LET VarDef SEMICOLON •

    $default  reduce using rule 47 (VarDeclStmt)


State 28

   63 StructDef: STRUCT ID LB • VarDeclList RB

    ID  shift, and go to state 64

    $default  reduce using rule 59 (VarDeclList)

    VarDecl      go to state 65
    VarDeclList  go to state 66


State 29

   65 FnDecl: FN ID LP • ParamDecl RP
   66       | FN ID LP • ParamDecl RP ARROW Type

    ID  shift, and go to state 64

    $default  reduce using rule 59 (VarDeclList)

    VarDecl      go to state 65
    VarDeclList  go to state 67
    ParamDecl    go to state 68


State 30

   14 ArrayExpr: ID • LSB ID RSB
   15          | ID • LSB NUM RSB
   35 LeftVal: ID •
   37        | ID • DOT ID
   45 FnCall: ID • LP RightValList RP

    DOT  shift, and go to state 69
    LP   shift, and go to state 70
    LSB  shift, and go to state 71

    $default  reduce using rule 35 (LeftVal)


State 31

   83 IfStmt: IF • LP BoolExpr RP CodeBlock
   84       | IF • LP BoolExpr RP CodeBlock ELSE CodeBlock

    LP  shift, and go to state 72


State 32

   85 WhileStmt: WHILE • LP BoolExpr RP CodeBlock

    LP  shift, and go to state 73


State 33

   76 CodeBlockStmt: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 74


State 34

   77 CodeBlockStmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 75


State 35

   68 ReturnStmt: RETURN • RightVal SEMICOLON

    ID   shift, and go to state 52
    NUM  shift, and go to state 53
    SUB  shift, and go to state 54
    NOT  shift, and go to state 55
    LP   shift, and go to state 56

    ArithExpr  go to state 57
    ArrayExpr  go to state 58
    ExprUnit   go to state 59
    BoolExpr   go to state 60
    BoolUnit   go to state 61
    RightVal   go to state 76
    FnCall     go to state 63


State 36

   78 CodeBlockStmt: SEMICOLON •

    $default  reduce using rule 78 (CodeBlockStmt)


State 37

   36 LeftVal: ArrayExpr •

    $default  reduce using rule 36 (LeftVal)


State 38

   71 CodeBlockStmt: AssignStmt •

    $default  reduce using rule 71 (CodeBlockStmt)


State 39

   34 AssignStmt: LeftVal • AS RightVal SEMICOLON

    AS  shift, and go to state 77


State 40

   82 CallStmt: FnCall • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 41

   70 CodeBlockStmt: VarDeclStmt •

    $default  reduce using rule 70 (CodeBlockStmt)


State 42

   75 CodeBlockStmt: ReturnStmt •

    $default  reduce using rule 75 (CodeBlockStmt)


State 43

   79 CodeBlockStmtList: CodeBlockStmt • CodeBlockStmtList

    ID         shift, and go to state 30
    LET        shift, and go to state 1
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    CONTINUE   shift, and go to state 33
    BREAK      shift, and go to state 34
    RETURN     shift, and go to state 35
    SEMICOLON  shift, and go to state 36

    $default  reduce using rule 80 (CodeBlockStmtList)

    ArrayExpr          go to state 37
    AssignStmt         go to state 38
    LeftVal            go to state 39
    FnCall             go to state 40
    VarDeclStmt        go to state 41
    ReturnStmt         go to state 42
    CodeBlockStmt      go to state 43
    CodeBlockStmtList  go to state 79
    CallStmt           go to state 45
    IfStmt             go to state 46
    WhileStmt          go to state 47


State 44

   81 CodeBlock: LB CodeBlockStmtList • RB

    RB  shift, and go to state 80


State 45

   72 CodeBlockStmt: CallStmt •

    $default  reduce using rule 72 (CodeBlockStmt)


State 46

   73 CodeBlockStmt: IfStmt •

    $default  reduce using rule 73 (CodeBlockStmt)


State 47

   74 CodeBlockStmt: WhileStmt •

    $default  reduce using rule 74 (CodeBlockStmt)


State 48

   57 Type: ID •

    $default  reduce using rule 57 (Type)


State 49

   56 Type: INT •

    $default  reduce using rule 56 (Type)


State 50

   48 VarDecl: ID COLON Type •
   52 VarDef: ID COLON Type • AS RightVal

    AS  shift, and go to state 81

    $default  reduce using rule 48 (VarDecl)


State 51

   50 VarDecl: ID LSB NUM • RSB COLON Type
   51        | ID LSB NUM • RSB
   54 VarDef: ID LSB NUM • RSB COLON Type AS LB RightValList RB
   55       | ID LSB NUM • RSB AS LB RightValList RB

    RSB  shift, and go to state 82


State 52
